add quote cards list component

--- a/src/components/quote-card/QuoteCard.module.css
+++ b/src/components/quote-card/QuoteCard.module.css
@@ -1,3 +1,10 @@
+.quoteCardContainer {
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .quoteCard {
 	width: 600px;
 	padding: 40px;
