--- a/src/components/input-form/InputForm.module.css
+++ b/src/components/input-form/InputForm.module.css
@@ -3,12 +3,24 @@
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.form {
+	width: 100%;
+	border: 2px solid #e5e7eb;
+	border-radius: 10px;
+	padding: 10px 12px;
 }
 
 .label {
   display: block;
   margin-bottom: 16px;
+  width: 100%;
 }
 
 .labelTitle {
