--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,31 @@
 
 .mode-select {
   display: flex;
-  flex-direction: column;
-  gap : 4px;
-  margin: 6px 0;
+  flex-direction: row;
+  justify-content: space-between;
+  gap : 20px;
+  margin: 20px 0 0 0;
+}
+
+.mode-select-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2px;
+}
+
+.mode-select-item {
+  display: flex;
+  flex-direction:column;
 }
 
 .mode-select-label {
-  display: flex;
-  align-items: center;
-  gap : 2px;
+  line-height: 100%;
+}
+
+.mode-select-description {
+  display: block;
+  font-size: 12px;
+  color: #6b7280; 
+  line-height: 100%;
 }
