--- a/src/components/quote-card/QuoteCard.module.css
+++ b/src/components/quote-card/QuoteCard.module.css
@@ -5,17 +5,21 @@
 	align-items: center;
 }
 
+.quoteCardInner {
+	padding: 15px;
+	box-sizing: border-box;
+	background-color: white;
+}
+
 .quoteCard {
-	width: 600px;
-	padding: 40px;
-	background: #f9f9f9;
-	border-radius: 20px;
+	padding: 20px;
+	background: #e8e7e7;
 	text-align: center;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .quoteText {
-	font-size: 24px;
+	font-size: 20px;
 	margin-bottom: 20px;
 	color: #333;
 }
@@ -23,6 +27,7 @@
 .subtitle {
 	font-size: 16px;
 	color: #555;
+	text-align: right;
 }
 
 .downloadButton {
