--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,12 @@
 	font-weight: 600;
 }
 
+.app-sample-container {
+	margin-bottom: 100px;
+}
+
 .app-example {
 	color: #374151;
-	font-weight: 400;
+	font-weight: 600;
+	margin-top: 0;
 }
