--- a/src/components/quote-card/QuoteCard.module.css
+++ b/src/components/quote-card/QuoteCard.module.css
@@ -3,12 +3,17 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
 }
 
 .quoteCardInner {
 	padding: 15px;
 	box-sizing: border-box;
 	background-color: white;
+
+	width: 90%;
+	display: flex;
+	flex-direction: column;
 }
 
 .quoteCard {
@@ -16,6 +21,8 @@
 	background: #e8e7e7;
 	text-align: center;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+	box-sizing: border-box;
+	flex-grow: 1;
 }
 
 .quoteText {
@@ -31,7 +38,6 @@
 }
 
 .downloadButton {
-	margin-top: 20px;
 	padding: 10px 20px;
 	border-radius: 10px;
 	background: #007aff;
