--- a/src/components/input-form/InputForm.module.css
+++ b/src/components/input-form/InputForm.module.css
@@ -77,11 +77,11 @@
 
 .button {
 	width: 100%;
-	background: linear-gradient(90deg, #2563eb 0%, #06b6d4 100%);
-	color: #fff;
+	background: #374151;
+	color: white;
+	border: 1px solid #374151;
 	padding: 12px 14px;
 	border-radius: 12px;
-	border: none;
 	cursor: pointer;
 	font-weight: 700;
 	font-size: 15px;
@@ -94,6 +94,9 @@
 .button:hover {
 	transform: translateY(-2px);
 	box-shadow: 0 8px 20px rgba(6, 182, 212, 0.12);
+	border: 1px solid #374151;
+	color: #374151;
+	background-color: white;
 }
 
 .button:active {
