--- a/src/components/input-form/InputForm.module.css
+++ b/src/components/input-form/InputForm.module.css
@@ -85,22 +85,18 @@
 	cursor: pointer;
 	font-weight: 700;
 	font-size: 15px;
-	transition:
-		transform 0.12s ease,
-		box-shadow 0.12s ease,
-		opacity 0.12s ease;
+	box-shadow: 0 8px 20px rgba(6, 182, 212, 0.12);
 }
 
 .button:hover {
-	transform: translateY(-2px);
-	box-shadow: 0 8px 20px rgba(6, 182, 212, 0.12);
 	border: 1px solid #374151;
 	color: #374151;
 	background-color: white;
 }
 
 .button:active {
-	transform: translateY(0);
+	scale: 0.98;
+	transition: 0.8s;
 }
 
 .button:disabled {
