We improved the styling and added a list container to the QuoteCardListTab component. We also adjusted the styling of the QuoteCard component.

--- a/src/components/quote-card-list/QuoteCardList.module.css
+++ b/src/components/quote-card-list/QuoteCardList.module.css
@@ -1,4 +1,13 @@
 .quoteCardListContainer {
-	width: 800px;
-	margin: 100px auto 100px auto;
+	padding: 24px;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 100px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.swiper {
+	width: 700px;
 }
