--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,17 @@
 #root {
 	max-width: 1280px;
+	width: 800px;
 	margin: 0 auto;
 	text-align: center;
 }
 
 .app-header {
-	padding: 24px;
-	box-sizing: border-box;
 	margin: 0 auto;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-
 	color: #374151;
 	font-weight: 600;
 }
